# SPIM_NPP_Maxcut

./: .gitignore  LICENSE  README.md
Calibration/: Calibration_v3.py  README.txt  numbers.csv  showSLMprofile.py
NumberPartition/: number_partitioning_v3.py
NumberPartition/numbers_list/: number_generation.py  numbers128.csv  numbers16.csv  numbers4.csv  numbers64.csv  numbers8.csv
cpp/: CMakeLists.txt  Readme.md
cpp/GenerateIIsingInteraction/: number_generation.py
cpp/cmake/: FindPylon.cmake
cpp/slm_display/cmake/: FindSLMDISPLAY.cmake
cpp/slm_display/includes/: holoeye_platforms.h  holoeye_slmdisplaysdk.h  holoeye_slmdisplaysdk_datahandle.h  holoeye_slmdisplaysdk_handles.h  holoeye_slmdisplaysdk_shared.h  holoeye_slmdisplaysdk_types.h
cpp/slm_display/includes/cpp/: holoeye_slmdisplaysdk.hpp  holoeye_slmdisplaysdk_cpp.cpp  holoeye_slmdisplaysdk_handles.hpp  holoeye_slmdisplaysdk_shared.hpp  show_slm_preview.h
cpp/slm_display/lib/win32/lib/: holoeye_slmdisplaysdk.def
cpp/slm_display/lib/win64/lib/: holoeye_slmdisplaysdk.def
cpp/slm_target/: CMakeLists.txt
cpp/slm_target/include/slm_target/: main.hpp  utils.hpp
cpp/slm_target/src/: main.cpp  sources.cpp  utils.cc
slm_files/: detect_heds_module_path.py  showSLMPreview.py
